# Checklist-in-CPP

./: .gitattributes  .gitignore  CMakeLists.txt  bossList.cpp  bossList.h  getInput.cpp  getInput.h  list.cpp  list.h  readme.md
dev/: test.cpp
lists/: test.json
src/: bossList.cpp  bossList.h  fileIO.cpp  fileIO.h  getInput.cpp  getInput.h  list.cpp  list.h  main.cpp
tests/: bossListTest.cpp  getInputTest.cpp  sampleGoodFile.json  sample_badfile.json
